--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : 大微尘的博客
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : David Chen
+  email : idavid.info@gmail.com
+  github : infodavid
   twitter : username
   feedburner : feedname
 
