edit adress and social info

--- a/_config.yml
+++ b/_config.yml
@@ -12,20 +12,20 @@ color:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: https://twitter.com/idavid_info
   - title: facebook
-    url:
+    url: https://www.facebook.com/profile.php?id=1800471257
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+    url: 
   - title: bitbucket 
     url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/infodavid
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 北京市东城区
+  - line: 剩下的不说
 
 # Build settings
 markdown: kramdown
