edit url to my domomain

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: 极克 UX
 description: "专注于产品与用户体验设计"
 baseurl: ""
-url: "infodavid.github.io"
+url: "www.idavidchen.com"
 
 # Build settings
 markdown: kramdown
