--- a/_config.yml
+++ b/_config.yml
@@ -107,5 +107,5 @@ testimonial:
     position: PM & UX Designer - Geeker UX
 
 # paginate blog page
-paginate: 5
-paginate_path: "blog/page:num"
+# paginate: 5
+# paginate_path: "blog/page:num"
