--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ address:
     - 民旺园
     - 东城区，北京
 email: idavid.info@gmail.com
-tel: +86 185 0003 0409
+tel: +86 185 **** ****
 
 
 ### GENERAL DATA FOR VARIOUS LOCATIONS ###
