--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,8 @@ testimonial:
     author:  David Chen
     position: PM & UX Designer - Geeker UX
 
+pygments: true
+
 # paginate blog page
 # paginate: 5
 # paginate_path: "blog/page:num"
