--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,6 @@ testimonial:
 
 pygments: true
 
-paginate blog page
-paginate: 5
-paginate_path: "blog/page:num"
+
+# paginate: 5
+# paginate_path: "blog/page:num"
