add framerjs document

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Site settings
 title: 极克 UX
-description: "专注于产品与用户体验设计"
+description: "专注于产品与用户体验设计。Framer.js, Quartz Composer"
 baseurl: ""
 url: "www.idavidchen.com"
 
