--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### GENERAL SETTINGS ###
 
 # Site settings
-title: 极克 UX
+title: 大蔚陈
 description: "专注于产品与用户体验设计。Framer.js, Quartz Composer"
 baseurl: ""
 url: "www.idavidchen.com"
