--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 大蔚陈
 description: "专注于产品与用户体验设计。Framer.js, Quartz Composer"
-baseurl: ""
+baseurl: "/"
 url: "www.idavidchen.com"
 
 # Build settings
